# libft

./: .gitignore  CMakeLists.txt  Makefile  Makefile.example  README.md  array.h  ft_linalg.h  ft_math.h  ft_printf.h  ft_putchar.c  ft_putchar_fd.c  get_next_line.h  hash_table.h  libft.h  libft_build.cmake  libft_compat.h  libft_linalg.h  libft_math.h  libft_test.cmake  mlx_consts.h  tests.h  threading.h
src/: array.c  endian.c  ft_alloc.c  ft_error_exit.c  ft_realloc.c  ft_swap.c  get_next_line.c  print_memory.c  swatch.c  t_buff.c
src/array/: array.c  arrayi.c  arrayp.c
src/format/: ft_ftoa.c  ft_ftobin.c  ft_itoa.c  ft_ultoa.c
src/hash_table/: hash.c  hash_table.c  hash_table2.c
src/linalg/: matrix.c  matrix_arithmetic.c  matrix_invert.c  matrix_transform.c  projection.c  vector.c  vector_arithmetic.c  vector_transform.c
src/math/: ft_abs.c  ft_log.c  ft_pow.c  ft_sqrt.c  ft_trig.c
src/printf/: apply_fw.c  conversion.c  convert.c  format_selector.c  ft_printf.c  handlers.c  spec_parse.c  varg.c
src/string/: ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_startswith.c  ft_strdup.c  ft_strlcpy.c  ft_strnstr.c  ft_strrev.c  ft_strsplit.c  ft_strtrim.c  ft_toupper.c
src/threading/: thread.c  thread_pool.c
tests/: gnl.c  ht.c  tests_main.c  tests_math.c  tests_printf.c  val_vs_ref_benchmark.c
